--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "openai>=1.99.1",
     "ripgrep>=14.1.0",
     "tenacity>=8.2.0",
+    "playwright>=1.40.0",
+    "camoufox>=0.4.11",
 ]
 dev-dependencies = [
     "pytest>=8.3.4",
