--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "pydantic-ai==1.0.5",
-    "httpx>=0.24.1",
+    "httpx[http2]>=0.24.1",
     "rich>=13.4.2",
     "logfire>=0.7.1",
     "pydantic>=2.4.0",
