--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dev-dependencies = [
     "pytest>=8.3.4",
     "pytest-cov>=6.1.1",
     "pytest-asyncio>=0.23.1",
+    "pexpect>=4.9.0",
     "ruff>=0.11.11",
 ]
 authors = [
@@ -90,5 +91,6 @@ dev = [
     "pytest>=8.3.4",
     "pytest-cov>=6.1.1",
     "pytest-asyncio>=0.23.1",
+    "pexpect>=4.9.0",
     "ruff>=0.11.11",
 ]
