⚡ refactor(git): remove pre-push pytest hook from lefthook
- Remove slow pre-push pytest hook to speed up local development
- Tests now run exclusively in CI where they belong
- Keep pre-commit hooks for linting and formatting (fast, local feedback)
- Faster git pushes while maintaining quality gates in CI

No more waiting for tests on every push! 🚀

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -43,13 +43,4 @@ pre-commit:
           echo "pnpm not found, skipping pnpm check"
         fi
 
-pre-push:
-  parallel: false
-  commands:
-    pytest:
-      run: |
-        if command -v uv >/dev/null 2>&1; then
-          uv run pytest -q
-        else
-          pytest -q
-        fi
+# pre-push hook removed - tests run in CI only
