Revert "feat: enable integration tests on Windows"
This reverts commit dc7277670098c266ec56522d375fd83966d5d5b8.

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -35,5 +35,12 @@ pre-commit:
           ruff check --fix {staged_files}
         fi
       stage_fixed: true
+    pnpm-check:
+      run: |
+        if command -v pnpm >/dev/null 2>&1; then
+          pnpm check
+        else
+          echo "pnpm not found, skipping pnpm check"
+        fi
 
 # pre-push hook removed - tests run in CI only
