--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: uv pip install -e .
 
+      - name: Install pexpect for integration tests
+        run: uv pip install pexpect>=4.9.0
+
 
 
       - name: Debug environment variables
