Update requires-python to exclude versions greater than 3.13
Changed requires-python from '>=3.11' to '>=3.11,<3.14' to prevent
installation with Python 3.14+ when released. The uv.lock file was
updated to reflect this dependency constraint change.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "code-puppy"
 version = "0.0.222"
 description = "Code generation agent"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "pydantic-ai==1.0.5",
     "httpx[http2]>=0.24.1",
