--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "camoufox>=0.4.11",
     "dbos>=2.0.0",
     "pillow>=10.0.0",
+    "gac>=0.1.0",
 ]
 dev-dependencies = [
     "pytest>=8.3.4",
