--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "dbos>=2.0.0",
     "pillow>=10.0.0",
     "gac>=0.1.0",
+    "chromadb>=0.5.0",
+    "sentence-transformers>=2.2.0",
 ]
 dev-dependencies = [
     "pytest>=8.3.4",
